# aws_serverless_fullstack_app

./: README.md
.github/workflows/: api.yaml  api.yml  destroy.yml  infrastructure.yml  ui.yml
services/tasks_api/: main.py  models.py  pyproject.toml  serverless.yml  tests.py
services/tasks_ui/: package-lock.json  package.json  serverless.yml  vite.config.js
services/tasks_ui/src/: App.vue  aws-exports.js
